[gd_scene load_steps=10 format=3 uid="uid://bip5iiguowys3"]

[ext_resource type="Script" path="res://Scripts/Bluff.gd" id="1_ei7cw"]
[ext_resource type="Shader" path="res://Assets/Shaders/BluffTable.gdshader" id="2_belpe"]
[ext_resource type="Texture2D" uid="uid://ccwt1wvcln5yq" path="res://Assets/BunnyTable/Background Bottom Layer.png" id="3_4ywot"]
[ext_resource type="Texture2D" uid="uid://4iy2sn5g6prk" path="res://Assets/BunnyTable/Background Middle Layer.png" id="4_orrug"]
[ext_resource type="Texture2D" uid="uid://bp2xqg184brch" path="res://Assets/BunnyTable/Amity Base Expression.png" id="5_0dn31"]
[ext_resource type="Texture2D" uid="uid://c1ogmg1eiatsr" path="res://Assets/BunnyTable/Background Top Layer.png" id="5_v8cn3"]
[ext_resource type="Texture2D" uid="uid://dtbm0egjugty0" path="res://Assets/BunnyTable/Beam of Light.png" id="6_kdsla"]
[ext_resource type="AudioStream" uid="uid://bxmn3r4qq71ua" path="res://Assets/SFX/click.wav" id="8_irqys"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rrtgy"]
shader = ExtResource("2_belpe")

[node name="Bluff" type="Node2D"]
script = ExtResource("1_ei7cw")

[node name="Background1" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_rrtgy")
offset_right = 2500.0
offset_bottom = 1406.0
scale = Vector2(0.768, 0.768)
texture = ExtResource("3_4ywot")

[node name="Background2" type="TextureRect" parent="."]
offset_right = 2500.0
offset_bottom = 1406.0
scale = Vector2(0.768, 0.768)
texture = ExtResource("4_orrug")

[node name="Background3" type="TextureRect" parent="."]
offset_right = 2500.0
offset_bottom = 1406.0
scale = Vector2(0.768, 0.768)
texture = ExtResource("5_v8cn3")

[node name="Character" type="TextureRect" parent="."]
offset_left = 456.0
offset_top = 124.0
offset_right = 1659.0
offset_bottom = 1213.0
scale = Vector2(0.768, 0.768)
texture = ExtResource("5_0dn31")

[node name="LightDim" type="PointLight2D" parent="."]
visible = false
position = Vector2(960, 540)
scale = Vector2(0.768, 0.768)
energy = 1.8
blend_mode = 2
texture = ExtResource("6_kdsla")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_irqys")

[node name="BluffyTheVampireSlayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerCards" type="HBoxContainer" parent="BluffyTheVampireSlayer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="playInstruction" type="RichTextLabel" parent="BluffyTheVampireSlayer"]
layout_mode = 0
offset_left = 1149.0
offset_top = 33.0
offset_right = 1429.0
offset_bottom = 188.0
scale = Vector2(2, 2)
text = "Current Round Card: "

[node name="cardSelection" type="OptionButton" parent="BluffyTheVampireSlayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.5
anchor_right = 0.187
anchor_bottom = 0.5
offset_left = 1411.52
offset_top = 206.0
offset_right = 1511.52
offset_bottom = 256.0
item_count = 13
popup/item_0/text = "Ace"
popup/item_0/id = 1
popup/item_1/text = "2"
popup/item_1/id = 2
popup/item_2/text = "3"
popup/item_2/id = 3
popup/item_3/text = "4"
popup/item_3/id = 4
popup/item_4/text = "5"
popup/item_4/id = 5
popup/item_5/text = "6"
popup/item_5/id = 6
popup/item_6/text = "7"
popup/item_6/id = 7
popup/item_7/text = "8"
popup/item_7/id = 8
popup/item_8/text = "9"
popup/item_8/id = 9
popup/item_9/text = "10"
popup/item_9/id = 10
popup/item_10/text = "Jack"
popup/item_10/id = 11
popup/item_11/text = "Queen"
popup/item_11/id = 12
popup/item_12/text = "King"
popup/item_12/id = 13

[node name="Button" type="Button" parent="BluffyTheVampireSlayer"]
layout_mode = 0
offset_left = 1529.0
offset_top = 226.0
offset_right = 1629.0
offset_bottom = 276.0
text = "Play Round"

[node name="Buton" type="Button" parent="BluffyTheVampireSlayer"]
layout_mode = 0
offset_left = 1419.0
offset_top = 226.0
offset_right = 1519.0
offset_bottom = 276.0
text = "Call Bluff?"

[node name="pass" type="Button" parent="BluffyTheVampireSlayer"]
layout_mode = 0
offset_left = 1639.0
offset_top = 226.0
offset_right = 1739.0
offset_bottom = 276.0
text = "Pass Round"

[connection signal="button_up" from="BluffyTheVampireSlayer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="BluffyTheVampireSlayer/Buton" to="." method="_on_buton_button_up"]
[connection signal="button_up" from="BluffyTheVampireSlayer/pass" to="." method="_on_pass_button_up"]
